syntax = "proto3";

import "blockchain.proto";
import "common.proto";
import "pool.proto";
import "consensus.proto";
import "sync.proto";

package net;

service NetworkService {
  // (to/from) Pool

  rpc ForwardUnverifiedTransaction(blockchain.UnverifiedTransaction)
      returns (common.Result);
  rpc SendUnverifiedTransactionHashes(pool.UnverifiedTransactionHashes)
      returns (common.Result);
  rpc SendUnverifiedTransactions(pool.UnverifiedTransactions)
      returns (common.Result);

  // (from) Consensus

  rpc BroadcastConsensusMessage(consensus.Message)
      returns (common.Result);

  // (to) Sync

  rpc BroadcastNewStatus(sync.Status)
      returns (common.Result);
  rpc SendSyncRequest(sync.SyncRequest)
      returns (common.Result);
  rpc SendSyncResponse(sync.SyncResp)
      returns (common.Result);
}
